# oasis-open-openc2-yuuki

./: .gitignore  AUTHORS  CONTRIBUTING.md  INSTALL.md  README.md  Startup Instructions Linux.md  requirements.txt  setup.cfg  setup.py
examples/: advanced_mqtt.py  consumer_example.py  http_example.py  mqtt_consumer_er.py  mqtt_consumer_full.py  mqtt_consumer_plugfest.py  mqtt_consumer_test1.py  mqtt_consumer_test2.py  mqtt_example.py  opendxl_example.py  simple_http.py
examples/actuators/: SBOM.py  database.py  er.py  os_query.py  osquery_conf.conf  osquery_conf.ini  pac.py  pace_example.py  pf.py  sbom.py  slpf.py
examples/actuators/files/: Registry  vulnerability1  working2
examples/producers/: http_producer.py  mqtt_producer.py  mqtt_producer_ER.py  mqtt_producer_plugfest.py  openc2_command.py  openc2_command_er.py  openc2_command_report.py  opendxl_producer.py
examples/producers/openc2_commands/: _query_features
framework/: actuator.py
framework/transports/http/: transport.py
framework/transports/mqtt/: transport.py
oc2_arch/: __init__.py  actuator.py  consumer.py
oc2_arch/openc2_types/: __init__.py
oc2_arch/transports/http/: transport.py
oc2_arch/transports/mqtt/: transport.py
src/yuuki/: consumer.py  serialization.py
src/yuuki/openc2_types/: message.py  (+2 more)
yuuki/: __init__.py  actuator.py  client.py  config.py  consumer.py  openc2_types.py  serialization.py  yuuki.conf
yuuki/client/: network.py  ui.py
yuuki/client_src/: network.py  ui.py
yuuki/consumer/: __init__.py  __main__.py  consumer.py
yuuki/openc2/: __init__.py  oc2_types.py
yuuki/openc2_types/: request.py  response.py
yuuki/producer/: __init__.py  network.py  ui.py
yuuki/serialize/: __init__.py  base.py  json_serialize.py
yuuki/transport/: __init__.py  base.py  http.py  mqtt.py
yuuki/transports/: __init__.py
(+48 files in other folders)
