[metadata]
  name = yuuki
  version = 1.0.0
  description = OpenC2 Reference Implementation
  url = https://github.com/oasis-open/openc2-yuuki
  long_description = file: README.md
  long_description_content_type = text/markdown


[options]
  packages = find:
  python_requires = >=3
  install_requires =
    importlib_resources; python_version < '3.7'
    flask >= 0.12.3
    pyOpenSSL >= 19.1.0
    requests >= 2.11.1

[options.package_data]
  * = *.json, *.conf

[options.entry_points]
  console_scripts =
    yuuki.actuator = yuuki.actuator:run
    yuuki.client = yuuki.client:run
