[metadata]
name = Yuuki
version = 3.0.0
description = OpenC2 Consumer Reference Implementation
# long_description = file: ReadMe.md
# long_description_content_type="text/markdown"

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm

[options.packages.find]
exclude =
    examples
