[bdist_wheel]
universal=1

[metadata]
name = Yuuki
version = 3.0.0
license_files = LICENSE
description = OpenC2 Consumer Reference Implementation
# long_description = file: ReadMe.md
# long_description_content_type="text/markdown"
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Information Technology
  Programming Language :: Python
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Utility :: OpenC2
  Topic :: Utility :: Security Automation

[options]
include_package_data = true
packages = find:
package_dir = src
python_requires = >=3.8
setup_requires = setuptools_scm

[options.packages.find]
where = src
exclude =
    examples
    tests
